--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <Hello onclick="">Hello world!</p>
-    
+    <h1>Hello!</h1>
     <script src="js/script.js"></script>
 </body>
 </html> 
