--- a/efefqef/html.html
+++ b/efefqef/html.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
-    <Hello onclick="">Hello world!</p>
    
-    <script src="/original.js"></script>
+    <script src="/efefqef/job.js"></script>
 </body>
 </html> 
